--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        <h1> This is my GitHub Pages website!</h1>
+        <h1> Hurray!! This is my first GitHub Pages website!</h1>
     </body>
 </html>
